# cram_solver

./: CMakeLists.txt  run instructions.txt
src/: main.cpp
src/block/: block.cpp  block.hpp  grid.cpp  grid.hpp
src/cannon/: cannon.cpp  cannon.hpp  metrics.hpp
src/constants/: constants.cpp  constants.hpp
src/face/: face.cpp  face.hpp
src/globals/: globals.cpp  globals.hpp
src/point/: point.cpp  point.hpp
src/solver/: manager.cpp  manager.hpp  solver.cpp  solver.hpp
tests/: test.cpp
